--- a/krymon-app/src/main/res/layout/service_list_item.xml
+++ b/krymon-app/src/main/res/layout/service_list_item.xml
@@ -5,7 +5,7 @@
                                               android:layout_height="match_parent"
                                               android:padding="2dp"
 >
-    <android.support.v7.widget.LinearLayoutCompat android:layout_width="fill_parent"
+    <android.support.v7.widget.LinearLayoutCompat android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   android:orientation="vertical">
         <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
@@ -25,12 +25,15 @@
                       android:id="@+id/service_list_item_last_checked"/>
         </android.support.v7.widget.LinearLayoutCompat>
     </android.support.v7.widget.LinearLayoutCompat>
-    <Button android:layout_width="wrap_content"
+
+    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
+    <Button
+            android:id="@+id/service_list_item_button_delete"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@android:drawable/ic_menu_delete"
             android:gravity="end"
             android:layout_gravity="end"
-            android:layout_weight="1"
             android:text=""
     />
 </android.support.v7.widget.LinearLayoutCompat>
